package src.se.kth.iv1350.integration;

import src.se.kth.iv1350.model.Receipt;

public class Printer {
    public Printer(){
        //TODO construct
    }

    public void printReceipt(Receipt currentReceipt){
        //TODO it needs to do it
    }
}
