package src.se.kth.iv1350.integration;

import src.se.kth.iv1350.dto.SaleDTO;

public class SaleLog {

    //TODO why is there no attributes?
    // TODO Whats this method for?
    public void logSale(SaleDTO saleInfo){
        //TODO this also needs to do it
    }
    public SaleLog(){
        //TODO construct
    }

}
